test liveplotting stuffs

--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +36,7 @@
     "import analytics.tears as tears\n",
     "from IPython.display import display\n",
     "from Queue import Queue\n",
-    "from utils.stock import Stock\n",
+    "from trading.stock import Stock\n",
     "from stock_backtest.data_handler import StockBacktestDataHandler\n",
     "from stock_backtest.execution_handler import StockBacktestExecutionHandler\n",
     "from stock_backtest.backtest import StockBacktest\n",
@@ -54,23 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "STARTING BACKTEST \n",
-      "Strategy: BuyStrategy \n",
-      "Execution: StockBacktestExecutionHandler \n",
-      "Start: 1/1/2012 00:00, End: 1/10/2016 00:00 \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "events = Queue()\n",
     "products = [Stock('MSFT'), Stock('ORCL')]\n",
@@ -86,13 +74,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "positions = strategy.get_positions()"
+    "returns_tear = tears.create_returns_tear_sheet(strategy.returns_series)"
    ]
   },
   {
@@ -103,7 +91,7 @@
    },
    "outputs": [],
    "source": [
-    "returns_tear = tears.create_returns_tear_sheet(strategy.time_series['returns'])"
+    "transactions_tear = tears.create_txn_tear_sheet(strategy.returns_series, strategy.positions_series, strategy.transactions_series)"
    ]
   },
   {
@@ -114,18 +102,7 @@
    },
    "outputs": [],
    "source": [
-    "transactions_tear = tears.create_txn_tear_sheet(strategy.time_series['returns'], positions, strategy.transactions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "round_trips_tear = tears.create_round_trip_tear_sheet(positions, strategy.transactions)"
+    "round_trips_tear = tears.create_round_trip_tear_sheet(strategy.positions_series, strategy.transactions_series)"
    ]
   },
   {
@@ -154,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
